name:                bench-processor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bench-processor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bench-processor
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , text
                      , bytestring
                      , rio
                      , lens
                      , cassava
                      , optparse-applicative
                      , scientific
                      , monoidal-containers
                      , dlist
